Add structured module, move to java 21